k8s/deployment-feature-x.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hermit-feature-x
  namespace: cx
spec:
  replicas: 3
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: hermit
      branch: feature-x
  template:
    metadata:
      labels:
        app: hermit
        branch: feature-x
    spec:
      containers:
      - name: hermit
        image: eu.gcr.io/limejump/hermit:6510ee3b41226bcca906850c2e64ba58659687e4
        resources:
          limits:
            memory: 128Mi
            cpu: 100m
          requests:
            memory: 128Mi
            cpu: 10m
        ports:
        - name: web
          containerPort: 3000
        readinessProbe:
          httpGet:
            port: web
            path: /v1/ready
