k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hermit
spec:
  replicas: 3
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: hermit
  template:
    metadata:
      labels:
        app: hermit
    spec:
      containers:
      - name: hermit
        image: eu.gcr.io/limejump/hermit:<git commit sha>
        resources:
          limits:
            memory: 128Mi
            cpu: 100m
          requests:
            memory: 128Mi
            cpu: 10m
        ports:
        - name: web
          containerPort: 3000
        readinessProbe:
          httpGet:
            port: web
            path: /v1/ready
