k8s/istio-gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: hermit-gateway
  namespace: cx
spec:
  selector:
    istio: ingressgateway  # Use the default Istio gateway provider
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - hermit.dev.limejump.io
    tls:
      httpsRedirect: true
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - hermit.dev.limejump.io
    tls:
      mode: SIMPLE
      credentialName: hermit-tls
      minProtocolVersion: TLSV1_2
      cipherSuites:
      - TLS_ECDHE_ECDSA_WITH_CHACHA20_POLY1305_SHA256
      - TLS_ECDHE_RSA_WITH_CHACHA20_POLY1305_SHA256
      - TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256
      - TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256
      - TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384
      - TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384
