k8s/istio-ingress.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: hermit-gateway
  namespace: cx
spec:
  selector:
    istio: ingressgateway  # Use the default Istio gateway provider
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - hermit.dev.limejump.io
    tls:
      httpsRedirect: true
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - hermit.dev.limejump.io
    tls:
      mode: SIMPLE
      credentialName: hermit-tls
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hermit
  namespace: cx
spec:
  hosts:
  - hermit.dev.limejump.io
  gateways:
  - hermit-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: hermit
